--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,5 @@
+
+
 body {
   display: flex;
   flex-direction: column;
@@ -5,22 +7,30 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #fff;
+  background-color: #eb7e787c;
   color: #333;
 }
 
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 20px;
+  
 }
 
 main {
   flex: 1;
+  max-width: 500px;
+  min-height: auto;
+
+  .banner{
+    background-image: url("../assets/images/acuarelaojos.jpg");
+  }
+  
 }
 
 header, footer {
-  background-color: #f8f8f8;
+  color: #ececec;
+  background-color: #333;;
   padding: 20px;
   text-align: center;
   box-shadow: 0 4px 2px -2px gray;
@@ -30,11 +40,3 @@ header, footer {
   margin-top: auto;
 }
 
-.imgbanner{
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  img{
-    max-width: 150vh;
-  }
-}
