--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,42 +1,114 @@
-
+@import "./variables.scss";
 
 body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+  font-family:$font-family;
   margin: 0;
   padding: 0;
-  font-family: 'Arial', sans-serif;
-  background-color: #eb7e787c;
-  color: #333;
+  box-sizing: border-box;
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color:rgba(0, 0, 0, 0.5);
+  z-index: 10;
+  box-shadow: 0 4px 2px -2px rgba(128, 128, 128, 0.199);
 }
 
-main {
-  flex: 1;
-  max-width: 500px;
-  min-height: auto;
-
-  .banner{
-    background-image: url("../assets/images/acuarelaojos.jpg");
-  }
-  
+.banner {
+  position: relative;
+  background-image: $background-image;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $primary-text-color;
+  text-align: center;
 }
 
-header, footer {
-  color: #ececec;
-  background-color: #333;;
+.banner::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  z-index: 1;
+}
+
+.banner-text {
+  position: relative;
+  z-index: 2;
+}
+
+.banner-text h1 {
+  font-size: 4rem;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  margin-top: 20px;
+  color: white;
+  background-color: #008000;
+  text-decoration: none;
+  font-size: 1rem;
+  transition: background-color 0.3s;
+}
+
+.btn:hover {
+  background-color: #005700;
+}
+
+.store {
+  text-align: center;
+  padding: 50px 20px;
+}
+
+.store h2 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+.product-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.product-container {
+  background-color: white;
+  border: 1px solid #ddd;
   padding: 20px;
   text-align: center;
-  box-shadow: 0 4px 2px -2px gray;
 }
 
-.footer {
-  margin-top: auto;
+.product-image {
+  max-width: 100%;
+  height: auto;
+}
+
+.product-name {
+  font-size: 1.2rem;
+  margin: 10px 0;
+}
+
+.product-price {
+  font-size: 1rem;
+  color: #666;
+}
+
+footer {
+  text-align: center;
+  padding: 10px;
+  background-color: $secondary-bg-color;
+  position: relative;
+  z-index: 10;
+  color: $secondary-text-color;
 }
 
