--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,7 +3,7 @@ $primary-bg-color: rgb(11, 12, 16);
 $secondary-bg-color: rgb(10,21,35);
 $tertiary-bg-color:  hsl(225, 100%, 98%);
 
-$primary-text-color: #e984b9;
+$primary-text-color: #E46A8E;
 $secondary-text-color: rgb(255,145,162);
 
 $primary-button-color: hsl(245, 75%, 52%);
@@ -11,7 +11,7 @@ $primary-button-hover: hsla(245, 75%, 52%, 0.67);
 $secondary-button-hover: hsla(245, 75%, 52%, 0.67);
 
 //background image
-$background-image: url('../assets/images/jinx-arcane-league-of-legends-2k-wallpaper-uhdpaper.com-193@0@k.jpg');
+$background-image: url('../assets/images/bella-tv-butterfly-reto-finalizado.jpg');
 
 //font family
 $font-family: 'Red Hat Display', sans-serif;
