--- a/src/components/ProductDetails.scss
+++ b/src/components/ProductDetails.scss
@@ -1,136 +1,42 @@
 .container-ProductDetails{
   display: grid;
-  grid-template-columns: 1fr 2fr;
-
+  grid-template-columns: 1fr 1fr;
+  min-height: calc(100vh - 88px);
   .productimage {
+    display: flex;
+    justify-content: center;
     grid-column: 1/2;
-    background-color: #eeedf6;
-    img {
-      width: 50%;
-      height: auto;
+    
+    .image {
+      object-fit: contain;
+      max-width: 100%;
+      max-height: 80vh;
+      margin: 10px;
+      border-width: 10px;
+      border-color: white;
+      
     }
   }
 
   .productinfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-self: left;
+    row-gap: 30px;
     grid-column: 2/3;
     padding-left: 2rem;
-    color: #9e9daa;
+    color: #0a072c;
     
     h1 {
-      color: #e0dfff;
+      color: #0f0e2d;
       margin-bottom: 1rem;
     }
     
     p {
-      color: #e0dfff;
+      color: #12113a;
       margin-bottom: 0.5rem;
     }
   }
-    
 }
   
-// body {
-//   font-family: Arial, sans-serif;
-//   margin: 0;
-//   padding: 0;
-//   background-color: #bc7892;
-// }
-
-// header {
- 
-//   color: white;
-//   padding: 10px 0;
-//   text-align: center;
-// }
-
-// nav ul {
-//   list-style: none;
-//   padding: 0;
-// }
-
-// nav ul li {
-//   display: inline;
-//   margin: 0 15px;
-// }
-
-// nav ul li a {
-//   color: white;
-//   text-decoration: none;
-// }
-
-// .container {
-//   display: flex;
-//   justify-content: space-between;
-//   padding: 20px;
-//   background-color: #f5f5f5;
-// }
-
-// .image-section {
-//   background-color: #f5f5f5;
-//   flex: 1;
-//   padding: 20px;
-// }
-
-// .image-section img {
-//   max-width: 100%;
-//   height: auto;
-// }
-
-// .details-section {
-//   flex: 1;
-//   padding: 20px;
-//   background-color: #fff;
-//   border-radius: 8px;
-//   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-// }
-
-// .details-section h2 {
-//   font-size: 2em;
-//   margin-bottom: 10px;
-// }
-
-// .details-section .description {
-//   font-size: 1em;
-//   margin-bottom: 20px;
-// }
-
-// .attributes {
-//   display: flex;
-//   justify-content: space-between;
-//   margin-bottom: 20px;
-// }
-
-// .attribute {
-//   flex: 1;
-//   margin-right: 10px;
-// }
-
-// .attribute h3 {
-//   font-size: 1.2em;
-//   margin-bottom: 5px;
-// }
-
-// .attribute p {
-//   font-size: 1em;
-// }
-
-// .price {
-//   font-size: 1.5em;
-//   font-weight: bold;
-//   margin-bottom: 10px;
-// }
-
-// .stock-status {
-//   font-size: 1em;
-//   color: red;
-// }
-
-// footer {
-//   text-align: center;
-//   padding: 10px;
-//   background-color: #2c3e50;
-//   color: white;
-//   position: fixed;
-//   width: 100%;
-//   bottom: 0;
-// }
