--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,14 +1,18 @@
 @import "./variables.scss";
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   display: flex;
   flex-direction: column;
   font-family:$font-family;
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
-  background: rgb(3,32,59);
-background: linear-gradient(90deg, rgba(3,32,59,1) 8%, rgba(8,9,14,1) 66%);
+  min-height: 100vh;
+  background: $primary-bg-color;
+  
 }
 
 header {
@@ -16,20 +20,19 @@ header {
   top: 0;
   width: 100%;
   z-index: 10;
-  box-shadow: 0 4px 2px -2px rgba(128, 128, 128, 0.199);
 }
 
 .banner {
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  // background-image: $background-image;
+  grid-template-columns: 1fr 1fr;
+  background: rgb(8,9,14);
+  background: linear-gradient(180deg, rgba(8,9,14,1) 8%, rgba(3,32,59,1) 64%, rgba(232,214,221,0.7512254901960784) 98%);
+  height: 100vh;
   
- 
-  height: 90vh;
-
   color: $primary-text-color;
   justify-content: center;
-  
+  top: -80px;
+  position: relative;
 
   .banner-text{
     font-size: 3rem;
@@ -46,14 +49,17 @@ header {
   }
 
   .banner-image{
-    width: 65%;
+    min-height: 90vh;
+    
     align-self: start;
-    justify-self: end;
-    padding: 0 40px 0 20px;
+    justify-self: center;
+    
+    
+    
     .imagebanner{
       max-width: 500px;
-      border-radius: 20px;
-
+      border-radius: 5px;
+      margin-top: 50px;
     }
     
   }
