--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,8 @@
 // colors
-$primary-bg-color: rgb(11, 12, 16);
+$primary-bg-color: #e8d6dd;
 $secondary-bg-color: rgb(10,21,35);
 $tertiary-bg-color:  hsl(225, 100%, 98%);
+
 
 $primary-text-color: #E46A8E;
 $secondary-text-color: rgb(255,145,162);
