--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,18 +4,13 @@ $secondary-bg-color: rgb(10,21,35);
 $tertiary-bg-color:  hsl(225, 100%, 98%);
 
 
-$primary-text-color: #E46A8E;
-$secondary-text-color: rgb(255,145,162);
+$primary-text-color: rgb(255,145,162);
+$secondary-text-color: rgb(34,57,82);
+$tertiary-text-color: rgb(232,214,222);
 
-$primary-button-color: hsl(245, 75%, 52%);
-$primary-button-hover: hsla(245, 75%, 52%, 0.67);
-$secondary-button-hover: hsla(245, 75%, 52%, 0.67);
-
-//background image
-$background-image: url('../assets/images/bella-tv-butterfly-reto-finalizado.jpg');
 
 //font family
-$font-family: 'Red Hat Display', sans-serif;
+$font-family: "Red Hat Diplay", sans-serif;
 
 //fonts size
 $font-size-large: 24px;
